--- a/event-streams-orders/pom.xml
+++ b/event-streams-orders/pom.xml
@@ -129,7 +129,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath</quarkus.native.additional-build-args>
       </properties>
     </profile>
     <profile>
