renamed to automatiko

--- a/event-streams-orders/src/main/resources/application.properties
+++ b/event-streams-orders/src/main/resources/application.properties
@@ -14,20 +14,20 @@
 # limitations under the License.
 #
 
-mp.openapi.extensions.smallrye.info.title=Automatik Examples:: Event streams :: Orders
+mp.openapi.extensions.smallrye.info.title=Automatiko Examples:: Event streams :: Orders
 mp.openapi.extensions.smallrye.info.version=1
-mp.openapi.extensions.smallrye.info.description=Automatik Examples project showcasing order processing as event stream with Apache Kafka
+mp.openapi.extensions.smallrye.info.description=Automatiko Examples project showcasing order processing as event stream with Apache Kafka
 
 quarkus.swagger-ui.theme=newspaper
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.title=Handling orders API
-quarkus.swagger-ui.footer=Powered by Automatik
+quarkus.swagger-ui.footer=Powered by Automatiko
 
-quarkus.automatik.jobs.type=filesystem
-quarkus.automatik.jobs.filesystem.path=target/jobs
+quarkus.automatiko.jobs.type=filesystem
+quarkus.automatiko.jobs.filesystem.path=target/jobs
 
-quarkus.automatik.persistence.type=filesystem
-quarkus.automatik.persistence.filesystem.path=target/processes
+quarkus.automatiko.persistence.type=filesystem
+quarkus.automatiko.persistence.filesystem.path=target/processes
 
 quarkus.log.category."org.openapitools".level=ERROR
 
