--- a/event-streams-sensors/src/main/resources/application.properties
+++ b/event-streams-sensors/src/main/resources/application.properties
@@ -17,16 +17,19 @@
 quarkus.swagger-ui.theme=newspaper
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.title=Leak detection API
-quarkus.swagger-ui.footer=Powered by Automatik
+quarkus.swagger-ui.footer=Powered by Automatiko
 
-quarkus.automatik.jobs.type=filesystem
-quarkus.automatik.jobs.filesystem.path=target/jobs
+quarkus.automatiko.jobs.type=filesystem
+quarkus.automatiko.jobs.filesystem.path=target/jobs
 
-quarkus.automatik.persistence.type=filesystem
-quarkus.automatik.persistence.filesystem.path=target/processes
+quarkus.automatiko.persistence.type=filesystem
+quarkus.automatiko.persistence.filesystem.path=target/processes
+
+mp.openapi.extensions.smallrye.info.title=Automatiko Examples:: Event streams :: Sensors (MQTT)
+mp.openapi.extensions.smallrye.info.version=0.0.0
+mp.openapi.extensions.smallrye.info.description=Automatiko Examples project showcasing sensor data processing as event stream with MQTT to detect leaks and anomalies
 
 quarkus.log.level=INFO
-quarkus.log.category."org.openapitools".level=ERROR
 #quarkus.log.category."io.vertx.mqtt".level=DEBUG
 
 # for debug purpose to avoid logging of thread blocked
