--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,14 +20,14 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/checkout@v2
       with:
-        repository: automatik-platform/automatik-platform-engine
-        path: automatik
+        repository: automatiko-io/automatiko-engine
+        path: automatiko
         token: ${{ secrets.ACCESS_TOKEN }}
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build Automatik
-      run: mvn -B install -DskipTests --file automatik/pom.xml
-    - name: Build Automatik Examples
+    - name: Build Automatiko
+      run: mvn -B install -DskipTests --file automatiko/pom.xml
+    - name: Build Automatiko Examples
       run: mvn -B package --file pom.xml
