--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.automatik.examples</groupId>
-  <artifactId>automatik-examples</artifactId>
+  <groupId>io.automatiko.examples</groupId>
+  <artifactId>automatiko-examples</artifactId>
   <version>0.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Automatik :: Examples</name>
-  <description>Complete examples for Automatik use cases</description>
+  <name>Automatiko :: Examples</name>
+  <description>Complete examples for Automatiko use cases</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,7 +15,7 @@
     <maven.compiler.source>11</maven.compiler.source>
 
     <quarkus.version>1.10.2.Final</quarkus.version>
-    <automatik.version>0.0.0-SNAPSHOT</automatik.version>
+    <automatiko.version>0.0.0-SNAPSHOT</automatiko.version>
     <wiremock.version>2.27.2</wiremock.version>
 
     <swagger-plugin.version>2.1.0</swagger-plugin.version>
