added vacation requests example and top level readme

--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,6 @@
   <modules>
     <module>event-streams-orders</module>
     <module>event-streams-sensors</module>
+    <module>vacation-requests</module>
   </modules>
 </project>
