--- a/weather-conditions/pom.xml
+++ b/weather-conditions/pom.xml
@@ -8,10 +8,10 @@
     <groupId>io.automatiko.examples</groupId>
     <version>0.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>vacation-requests</artifactId>
+  <artifactId>weather-conditions</artifactId>
 
-  <name>Automatiko Examples:: Human Centric &amp; Database :: Vacation requests</name>
-  <description>Automatiko Examples project showcasing human centric workflows and data base records processing</description>
+  <name>Automatiko Examples:: Service orchestration :: Weather conditions</name>
+  <description>Automatiko Examples project showcasing service orchestration workflows that invokes REST and Java services</description>
 
   <properties>
     <quarkus.version>1.10.2.Final</quarkus.version>
@@ -45,33 +45,17 @@
 
     <dependency>
       <groupId>io.automatiko.addons</groupId>
-      <artifactId>automatiko-db-persistence-addon</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>io.automatiko.addons</groupId>
       <artifactId>automatiko-process-management-addon</artifactId>
     </dependency>
-    
-    <dependency>
-      <groupId>io.automatiko.addons</groupId>
-      <artifactId>automatiko-events-websocket-addon</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-hibernate-validator</artifactId>
-    </dependency>
 
-    <!-- security -->
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-elytron-security-properties-file</artifactId>
+      <artifactId>quarkus-rest-client</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-jdbc-h2</artifactId>
+      <artifactId>quarkus-smallrye-opentracing</artifactId>
     </dependency>
 
     <dependency>
@@ -82,6 +66,12 @@
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock-jre8</artifactId>
+      <version>${wiremock.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -154,7 +144,8 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath, --initialize-at-run-time=io.automatiko.engine.workflow.marshalling.impl.AutomatikMessages</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime,
+          --allow-incomplete-classpath</quarkus.native.additional-build-args>
       </properties>
     </profile>
     <profile>
@@ -187,7 +178,7 @@
           <artifactId>quarkus-container-image-jib</artifactId>
         </dependency>
       </dependencies>
-        <build>
+      <build>
         <plugins>
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
@@ -212,7 +203,8 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath, --initialize-at-run-time=io.automatiko.engine.workflow.marshalling.impl.AutomatikMessages</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime,
+          --allow-incomplete-classpath</quarkus.native.additional-build-args>
         <quarkus.native.container-build>true</quarkus.native.container-build>
       </properties>
     </profile>
