moved to automatiko-service

--- a/event-streams-orders/pom.xml
+++ b/event-streams-orders/pom.xml
@@ -29,7 +29,7 @@
   <dependencies>
     <dependency>
       <groupId>io.automatiko.quarkus</groupId>
-      <artifactId>automatiko-quarkus</artifactId>
+      <artifactId>automatiko-service</artifactId>
     </dependency>
     <dependency>
       <groupId>io.automatiko.addons</groupId>
