--- a/event-streams-sensors/pom.xml
+++ b/event-streams-sensors/pom.xml
@@ -28,7 +28,7 @@
   <dependencies>
     <dependency>
       <groupId>io.automatiko.quarkus</groupId>
-      <artifactId>automatiko-quarkus</artifactId>
+      <artifactId>automatiko-service</artifactId>
     </dependency>
     <dependency>
       <groupId>io.automatiko.addons</groupId>
