--- a/vacation-requests/pom.xml
+++ b/vacation-requests/pom.xml
@@ -40,7 +40,7 @@
   <dependencies>
     <dependency>
       <groupId>io.automatiko.quarkus</groupId>
-      <artifactId>automatiko-quarkus</artifactId>
+      <artifactId>automatiko-service</artifactId>
     </dependency>
 
     <dependency>
