upgrade to quarkus 1.11.CR1

--- a/event-streams-sensors/src/main/resources/application.properties
+++ b/event-streams-sensors/src/main/resources/application.properties
@@ -25,6 +25,8 @@ quarkus.automatiko.jobs.filesystem.path=target/jobs
 quarkus.automatiko.persistence.type=filesystem
 quarkus.automatiko.persistence.filesystem.path=target/processes
 
+quarkus.automatiko.security.authorized-only=false
+
 mp.openapi.extensions.smallrye.info.title=Automatiko Examples:: Event streams :: Sensors (MQTT)
 mp.openapi.extensions.smallrye.info.version=0.0.0
 mp.openapi.extensions.smallrye.info.description=Automatiko Examples project showcasing sensor data processing as event stream with MQTT to detect leaks and anomalies
