--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
 
-    <quarkus.version>1.10.2.Final</quarkus.version>
+    <quarkus.version>1.11.0.CR1</quarkus.version>
     <automatiko.version>0.0.0-SNAPSHOT</automatiko.version>
     <wiremock.version>2.27.2</wiremock.version>
 
