--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: automatiko-io/automatiko-engine
+        ref: development
         path: automatiko
         token: ${{ secrets.ACCESS_TOKEN }}
     - name: Set up JDK 11
