--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
 
-    <quarkus.version>1.11.0.CR1</quarkus.version>
-    <automatiko.version>0.0.0-SNAPSHOT</automatiko.version>
+    <quarkus.version>1.11.0.Final</quarkus.version>
+    <automatiko.version>${project.version}</automatiko.version>
     <wiremock.version>2.27.2</wiremock.version>
 
     <swagger-plugin.version>2.1.0</swagger-plugin.version>
