--- a/mysql-operator/k8s/operator.yaml
+++ b/mysql-operator/k8s/operator.yaml
@@ -23,7 +23,7 @@ spec:
       serviceAccount: mysql-schema-operator # specify the ServiceAccount under which's RBAC persmissions the operator will be executed under
       containers:
       - name: operator
-        image: mswiderski/mysql-operator:0.0.0-SNAPSHOT
+        image: automatiko/mysql-operator:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
