--- a/mysql-operator/k8s/schema.yaml
+++ b/mysql-operator/k8s/schema.yaml
@@ -1,6 +1,6 @@
 apiVersion: "mysql.sample.javaoperatorsdk/v1"
 kind: MySQLSchema
 metadata:
-  name: mydb-test2
+  name: mydb-test
 spec:
   encoding: utf8
