added additional parameter to allow to use adoptopenjdk image to allow remote dev mode generating process images on reload

--- a/mysql-operator/src/main/resources/application.properties
+++ b/mysql-operator/src/main/resources/application.properties
@@ -29,6 +29,7 @@ quarkus.automatiko.jobs.filesystem.path=target/jobs
 quarkus.automatiko.persistence.type=filesystem
 quarkus.automatiko.persistence.filesystem.path=target/processes
 
-# for remote development mode enable following parameters
+# for remote development mode enable following three parameters
 #quarkus.package.type=mutable-jar
 #quarkus.live-reload.password=0perator
+#quarkus.jib.base-jvm-image=adoptopenjdk/openjdk11
