upgrade of quarkus to 1.13.0.CR1, enhanced mysql operator example to use password generator service, removed licences

--- a/mysql-operator/k8s/operator.yaml
+++ b/mysql-operator/k8s/operator.yaml
@@ -35,7 +35,7 @@ spec:
         - name: MYSQL_PASSWORD
           value: password # sample-level security
         - name: QUARKUS_LAUNCH_DEVMODE
-          value: 'false' # to allow deployment in development mode
+          value: 'false' # to allow deployment in development mode set this to true
 
 ---
 apiVersion: v1
