--- a/mysql-operator/src/main/resources/application.properties
+++ b/mysql-operator/src/main/resources/application.properties
@@ -1,19 +1,3 @@
-#
-# Copyright 2020 Red Hat, Inc. and/or its affiliates.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
 mp.openapi.extensions.smallrye.info.title=MySQL Kubernetes Operator
 mp.openapi.extensions.smallrye.info.version=0.0.0
 mp.openapi.extensions.smallrye.info.description=Sample Kubernetes operator for MySQL schema provisioning
@@ -33,3 +17,5 @@ quarkus.automatiko.persistence.filesystem.path=target/processes
 #quarkus.package.type=mutable-jar
 #quarkus.live-reload.password=0perator
 #quarkus.jib.base-jvm-image=adoptopenjdk/openjdk11
+#quarkus.live-reload.retry-interval=3s
+#quarkus.live-reload.retry-max-attempts=20
