added support for user task management and email addons for vacation requests example

--- a/vacation-requests/pom.xml
+++ b/vacation-requests/pom.xml
@@ -47,6 +47,16 @@
     </dependency>
     
     <dependency>
+      <groupId>io.automatiko.addons</groupId>
+      <artifactId>automatiko-user-tasks-management-addon</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>io.automatiko.addons</groupId>
+      <artifactId>automatiko-user-tasks-email-addon</artifactId>
+    </dependency>
+    
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-hibernate-validator</artifactId>
     </dependency>
