added additional profile to let use email notifications as part of trying vacation requests example

--- a/vacation-requests/src/main/resources/application.properties
+++ b/vacation-requests/src/main/resources/application.properties
@@ -26,9 +26,19 @@ quarkus.security.users.file.roles=test-roles.properties
 quarkus.security.users.file.realm-name=VacationManagement
 quarkus.security.users.file.plain-text=true
 
+quarkus.mailer.mock=true
+
 #### test configuration
 %test.quarkus.hibernate-orm.log.sql=false
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:automatiko-store
 # drop and create the database at startup (use `update` to only update the schema)
 %test.quarkus.hibernate-orm.database.generation=create-drop
 
+%withemail.quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
+%withemail.quarkus.mailer.from=${email.from}
+%withemail.quarkus.mailer.host=${email.host}
+%withemail.quarkus.mailer.port=${email.port}
+%withemail.quarkus.mailer.start-tls=REQUIRED
+%withemail.quarkus.mailer.username=${email.user}
+%withemail.quarkus.mailer.password=${email.password}
+%withemail.quarkus.mailer.mock=false
