--- a/weather-conditions/pom.xml
+++ b/weather-conditions/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>automatiko-examples</artifactId>
     <groupId>io.automatiko.examples</groupId>
-    <version>0.4.0</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>weather-conditions</artifactId>
 
