added user registration function flow example based on serverless workflow

--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,6 @@
     <module>document-processor</module>
     <module>mysql-operator</module>
     <module>user-registration</module>
+    <module>user-registration-sw</module>
   </modules>
 </project>
