updates to use gcp pubsub sink and readme fixes

--- a/user-registration-gcp-cloudrun/src/main/resources/application.properties
+++ b/user-registration-gcp-cloudrun/src/main/resources/application.properties
@@ -3,3 +3,5 @@ quarkus.ssl.native=true
 
 quarkus.automatiko.target-deployment=gcp-pubsub
 quarkus.google.cloud.project-id=
+
+quarkus.log.category."org.jboss.resteasy".level=ERROR
