--- a/user-registration-gcp-cloudrun/pom.xml
+++ b/user-registration-gcp-cloudrun/pom.xml
@@ -31,6 +31,10 @@
       <artifactId>automatiko-function-flow</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.automatiko.extras</groupId>
+      <artifactId>automatiko-gcp-pubsub-sink</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-rest-client</artifactId>
     </dependency>
