improved handling of gcp pubsub with function flow, added test cases for gcp based user registration project

--- a/user-registration-gcp-cloudrun/src/main/resources/application.properties
+++ b/user-registration-gcp-cloudrun/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 quarkus.ssl.native=true
 
 quarkus.automatiko.target-deployment=gcp-pubsub
-quarkus.google.cloud.project-id=
+quarkus.google.cloud.project-id=CHANGE_ME
 
 quarkus.log.category."org.jboss.resteasy".level=ERROR
+
+%test.quarkus.http.port=${quarkus.http.test-port:8081}
