--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
 
-    <quarkus.version>2.1.0.Final</quarkus.version>
+    <quarkus.version>2.2.1.Final</quarkus.version>
+    <camel.version>2.2.0</camel.version>
     <automatiko.version>${project.version}</automatiko.version>
     <wiremock.version>2.27.2</wiremock.version>
 
