--- a/weather-conditions/pom.xml
+++ b/weather-conditions/pom.xml
@@ -38,7 +38,7 @@
 
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-rest-client</artifactId>
+      <artifactId>quarkus-rest-client-reactive</artifactId>
     </dependency>
 
     <dependency>
