added graphql service interface to vacation request example

--- a/vacation-requests/src/main/resources/application.properties
+++ b/vacation-requests/src/main/resources/application.properties
@@ -26,6 +26,8 @@ quarkus.security.users.file.roles=test-roles.properties
 quarkus.security.users.file.realm-name=VacationManagement
 quarkus.security.users.file.plain-text=true
 
+quarkus.automatiko.security.authorized-only=false
+
 quarkus.mailer.mock=true
 
 #### test configuration
