--- a/vacation-requests/pom.xml
+++ b/vacation-requests/pom.xml
@@ -57,6 +57,11 @@
     </dependency>
     
     <dependency>
+      <groupId>io.automatiko.addons</groupId>
+      <artifactId>automatiko-graphql-addon</artifactId>
+    </dependency>
+    
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-hibernate-validator</artifactId>
     </dependency>
@@ -70,7 +75,7 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-h2</artifactId>
-    </dependency>
+    </dependency>   
 
     <dependency>
       <groupId>io.quarkus</groupId>
