small improvements to support incidents example to better utilize cassandra capabilities

--- a/support-incidents/src/main/resources/application.properties
+++ b/support-incidents/src/main/resources/application.properties
@@ -13,6 +13,7 @@ quarkus.automatiko.persistence.type=cassandra
 quarkus.automatiko.persistence.cassandra.create-keyspace=true
 #quarkus.automatiko.persistence.cassandra.create-tables=false
 quarkus.automatiko.persistence.cassandra.keyspace=automatiko
+quarkus.automatiko.on-instance-end=keep
 
 quarkus.automatiko.jobs.type=cassandra
 quarkus.automatiko.jobs.cassandra.create-keyspace=true
@@ -21,6 +22,7 @@ quarkus.automatiko.jobs.cassandra.keyspace=automatiko
 
 quarkus.cassandra.contact-points=localhost:9042
 quarkus.cassandra.local-datacenter=datacenter1
+quarkus.cassandra.init.eager-init=true
 #quarkus.cassandra.cloud.secure-connect-bundle=/Users/mswiderski/Development/git-repos/community/automatiko-engine/integration-tests/automatiko-cassandra/src/main/resources/secure-connect-automatiko.zip
 #quarkus.cassandra.auth.username=QTHahIlypBPWrXBedetfMWcF
 #quarkus.cassandra.auth.password=b1sbcN0+2WY,JUYn5-ydQQyeRh5pZYSSaqpz+6QGkbS9U4gDbA6TU9m4xPKr1h_-+1OewKt4CocM1z0.i+9HAd+6s,4PPwmI9-4bUtfOf7kbN0qX90LfeEZ92LEnPzAg
