--- a/vacation-requests/pom.xml
+++ b/vacation-requests/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>automatiko-examples</artifactId>
     <groupId>io.automatiko.examples</groupId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.8.0</version>
   </parent>
   <artifactId>vacation-requests</artifactId>
 
