added omboarding example that is workflow as function flow with interaction with other services and functions illustrating correlation on workflow end

--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,6 @@
     <module>user-registration-sw</module>
     <module>user-registration-gcp-cloudrun</module>
     <module>support-incidents</module>
+    <module>omboarding</module>
   </modules>
 </project>
