added user registration as function (azure, gcp, lambda) example

--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,6 @@
     <module>user-registration-gcp-cloudrun</module>
     <module>support-incidents</module>
     <module>omboarding</module>
+    <module>user-registration-function</module>
   </modules>
 </project>
