--- a/event-streams-orders/pom.xml
+++ b/event-streams-orders/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>automatiko-service</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.automatiko.decision</groupId>
+      <artifactId>automatiko-decision-dmn</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.automatiko.addons</groupId>
       <artifactId>automatiko-filesystem-persistence-addon</artifactId>
     </dependency>
