--- a/event-streams-sensors/pom.xml
+++ b/event-streams-sensors/pom.xml
@@ -31,6 +31,10 @@
       <artifactId>automatiko-service</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.automatiko.decision</groupId>
+      <artifactId>automatiko-decision-dmn</artifactId>
+    </dependency>    
+    <dependency>
       <groupId>io.automatiko.addons</groupId>
       <artifactId>automatiko-filesystem-persistence-addon</artifactId>
     </dependency>
