--- a/vacation-requests/pom.xml
+++ b/vacation-requests/pom.xml
@@ -30,7 +30,10 @@
       <groupId>io.automatiko.quarkus</groupId>
       <artifactId>automatiko-service</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>io.automatiko.decision</groupId>
+      <artifactId>automatiko-decision-dmn</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.automatiko.addons</groupId>
       <artifactId>automatiko-db-persistence-addon</artifactId>
