use alpine openjdk11 as the base image to allow to store files within the container

--- a/document-processor/src/main/resources/application.properties
+++ b/document-processor/src/main/resources/application.properties
@@ -17,6 +17,8 @@ quarkus.automatiko.persistence.filesystem.path=target/processes
 
 documents.folder=./target/documents
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+
 mp.messaging.incoming.textfiles.endpoint-uri=file:${documents.folder}/?include=.*\\.txt
 mp.messaging.incoming.zipfiles.endpoint-uri=file:${documents.folder}/?include=.*\\.zip
 
