--- a/event-streams-sensors/src/main/resources/application.properties
+++ b/event-streams-sensors/src/main/resources/application.properties
@@ -18,6 +18,8 @@ mp.openapi.extensions.smallrye.info.description=Automatiko Examples project show
 quarkus.log.level=INFO
 #quarkus.log.category."io.vertx.mqtt".level=DEBUG
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+
 # for debug purpose to avoid logging of thread blocked
 #quarkus.vertx.max-event-loop-execute-time=500S
 #quarkus.vertx.warning-exception-time=500S
