--- a/user-registration-function/src/main/resources/application.properties
+++ b/user-registration-function/src/main/resources/application.properties
@@ -2,3 +2,5 @@ quarkus.http.root-path=/api
 quarkus.ssl.native=true
 
 quarkus.log.level=INFO
+
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
