--- a/user-registration-gcp-cloudrun/src/main/resources/application.properties
+++ b/user-registration-gcp-cloudrun/src/main/resources/application.properties
@@ -6,4 +6,6 @@ quarkus.google.cloud.project-id=CHANGE_ME
 
 quarkus.log.category."org.jboss.resteasy".level=ERROR
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+
 %test.quarkus.http.port=${quarkus.http.test-port:8081}
