--- a/weather-conditions/src/main/resources/application.properties
+++ b/weather-conditions/src/main/resources/application.properties
@@ -10,6 +10,7 @@ quarkus.swagger-ui.footer=Powered by Automatiko
 # enable request and response logging for REST calls
 #quarkus.log.category."io.automatiko.engine.quarkus.rest".level=DEBUG
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
 
 quarkus.jaeger.service-name=automatiko-weather-condition-service
 quarkus.jaeger.sampler-type=const
