--- a/event-streams-orders/src/main/resources/application.properties
+++ b/event-streams-orders/src/main/resources/application.properties
@@ -15,6 +15,8 @@ quarkus.automatiko.persistence.filesystem.path=target/processes
 
 quarkus.log.category."org.openapitools".level=ERROR
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+
 # for debug purpose to avoid logging of thread blocked
 #quarkus.vertx.max-event-loop-execute-time=500S
 #quarkus.vertx.warning-exception-time=500S
