--- a/mysql-operator/src/main/resources/application.properties
+++ b/mysql-operator/src/main/resources/application.properties
@@ -13,6 +13,8 @@ quarkus.automatiko.jobs.filesystem.path=target/jobs
 quarkus.automatiko.persistence.type=filesystem
 quarkus.automatiko.persistence.filesystem.path=target/processes
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+
 # for remote development mode enable following three parameters
 #quarkus.package.type=mutable-jar
 #quarkus.live-reload.password=0perator
