--- a/user-registration/src/main/resources/application.properties
+++ b/user-registration/src/main/resources/application.properties
@@ -3,3 +3,5 @@ quarkus.ssl.native=true
 
 quarkus.log.level=INFO
 quarkus.log.category."org.jboss.resteasy".level=ERROR
+
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
