--- a/vacation-requests/src/main/resources/application.properties
+++ b/vacation-requests/src/main/resources/application.properties
@@ -30,6 +30,8 @@ quarkus.automatiko.security.authorized-only=false
 
 quarkus.mailer.mock=true
 
+quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+
 #### test configuration
 %test.quarkus.hibernate-orm.log.sql=false
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:automatiko-store
