--- a/omboarding/registration/pom.xml
+++ b/omboarding/registration/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>omboarding</artifactId>
     <groupId>io.automatiko.examples</groupId>
-    <version>0.16.0</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>registration</artifactId>
 
