updates weather forecast process after upgrade of openapi generation tools

--- a/weather-conditions/src/main/resources/application.properties
+++ b/weather-conditions/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.title=Weather conditions API
 quarkus.swagger-ui.footer=Powered by Automatiko
 
+quarkus.log.category."org.openapitools.codegen".level=OFF
 # enable request and response logging for REST calls
 #quarkus.log.category."io.automatiko.engine.quarkus.rest".level=DEBUG
 
