added example project for user registration based on Java DSL, small updates to readme files to point to right swagger ui url

--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
     <module>omboarding</module>
     <module>user-registration-function</module>
     <module>workflows-java-dsl</module>
+    <module>user-registration-javadsl</module>
   </modules>
 </project>
