--- a/workflows-java-dsl/pom.xml
+++ b/workflows-java-dsl/pom.xml
@@ -49,6 +49,17 @@
       <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-smallrye-reactive-messaging</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-file</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
