--- a/event-streams-orders/pom.xml
+++ b/event-streams-orders/pom.xml
@@ -133,7 +133,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath, --initialize-at-run-time=io.automatiko.engine.workflow.marshalling.impl.AutomatikMessages</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime</quarkus.native.additional-build-args>
       </properties>
     </profile>
     <profile>
@@ -191,7 +191,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath, --initialize-at-run-time=io.automatiko.engine.workflow.marshalling.impl.AutomatikMessages</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime</quarkus.native.additional-build-args>
         <quarkus.native.container-build>true</quarkus.native.container-build>
       </properties>
     </profile>
