--- a/vacation-requests/pom.xml
+++ b/vacation-requests/pom.xml
@@ -160,7 +160,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath, --initialize-at-run-time=io.automatiko.engine.workflow.marshalling.impl.AutomatikMessages</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime</quarkus.native.additional-build-args>
       </properties>
     </profile>
     <profile>
@@ -218,7 +218,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime, --allow-incomplete-classpath, --initialize-at-run-time=io.automatiko.engine.workflow.marshalling.impl.AutomatikMessages</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--report-unsupported-elements-at-runtime</quarkus.native.additional-build-args>
         <quarkus.native.container-build>true</quarkus.native.container-build>
       </properties>
     </profile>
