moved to eclipse-temurin:17-jre-alpine as base image

--- a/document-processor/src/main/resources/application.properties
+++ b/document-processor/src/main/resources/application.properties
@@ -17,7 +17,7 @@ quarkus.automatiko.persistence.filesystem.path=target/processes
 
 documents.folder=./target/documents
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 mp.messaging.incoming.textfiles.endpoint-uri=file:${documents.folder}/?include=.*\\.txt
 mp.messaging.incoming.zipfiles.endpoint-uri=file:${documents.folder}/?include=.*\\.zip
