--- a/event-streams-orders/src/main/resources/application.properties
+++ b/event-streams-orders/src/main/resources/application.properties
@@ -15,7 +15,7 @@ quarkus.automatiko.persistence.filesystem.path=target/processes
 
 quarkus.log.category."org.openapitools".level=ERROR
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 # for debug purpose to avoid logging of thread blocked
 #quarkus.vertx.max-event-loop-execute-time=500S
