--- a/event-streams-sensors/src/main/resources/application.properties
+++ b/event-streams-sensors/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mp.openapi.extensions.smallrye.info.description=Automatiko Examples project show
 quarkus.log.level=INFO
 #quarkus.log.category."io.vertx.mqtt".level=DEBUG
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 # for debug purpose to avoid logging of thread blocked
 #quarkus.vertx.max-event-loop-execute-time=500S
