--- a/mysql-operator/src/main/resources/application.properties
+++ b/mysql-operator/src/main/resources/application.properties
@@ -13,7 +13,7 @@ quarkus.automatiko.jobs.filesystem.path=target/jobs
 quarkus.automatiko.persistence.type=filesystem
 quarkus.automatiko.persistence.filesystem.path=target/processes
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 # for remote development mode enable following three parameters
 #quarkus.package.type=mutable-jar
