--- a/omboarding/registration/src/main/resources/application.properties
+++ b/omboarding/registration/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
 quarkus.ssl.native=true
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
