--- a/support-incidents/src/main/resources/application.properties
+++ b/support-incidents/src/main/resources/application.properties
@@ -27,4 +27,4 @@ quarkus.cassandra.init.eager-init=true
 #quarkus.cassandra.auth.username=QTHahIlypBPWrXBedetfMWcF
 #quarkus.cassandra.auth.password=b1sbcN0+2WY,JUYn5-ydQQyeRh5pZYSSaqpz+6QGkbS9U4gDbA6TU9m4xPKr1h_-+1OewKt4CocM1z0.i+9HAd+6s,4PPwmI9-4bUtfOf7kbN0qX90LfeEZ92LEnPzAg
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
