--- a/user-registration-function/src/main/resources/application.properties
+++ b/user-registration-function/src/main/resources/application.properties
@@ -3,4 +3,4 @@ quarkus.ssl.native=true
 
 quarkus.log.level=INFO
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
