--- a/vacation-requests/src/main/resources/application.properties
+++ b/vacation-requests/src/main/resources/application.properties
@@ -30,7 +30,7 @@ quarkus.automatiko.security.authorized-only=false
 
 quarkus.mailer.mock=true
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 #### test configuration
 %test.quarkus.hibernate-orm.log.sql=false
