--- a/weather-conditions/src/main/resources/application.properties
+++ b/weather-conditions/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.log.category."org.openapitools.codegen".level=OFF
 # enable request and response logging for REST calls
 #quarkus.log.category."io.automatiko.engine.quarkus.rest".level=DEBUG
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 quarkus.jaeger.service-name=automatiko-weather-condition-service
 quarkus.jaeger.sampler-type=const
