--- a/user-registration/src/main/resources/application.properties
+++ b/user-registration/src/main/resources/application.properties
@@ -4,4 +4,4 @@ quarkus.ssl.native=true
 quarkus.log.level=INFO
 quarkus.log.category."org.jboss.resteasy".level=ERROR
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
