--- a/workflows-java-dsl/src/main/resources/application.properties
+++ b/workflows-java-dsl/src/main/resources/application.properties
@@ -20,7 +20,7 @@ quarkus.log.category."org.openapitools".level=ERROR
 quarkus.log.category."MessageConsumer".level=DEBUG
 quarkus.log.category."MessageProducer".level=DEBUG
 
-quarkus.jib.base-jvm-image=fabric8/java-alpine-openjdk11-jre
+quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 quarkus.kafka.devservices.port=55100
 
