migrated to opentelemetry instead of opentracing for tracing support

--- a/weather-conditions/src/main/resources/application.properties
+++ b/weather-conditions/src/main/resources/application.properties
@@ -13,8 +13,6 @@ quarkus.log.category."org.openapitools.codegen".level=OFF
 
 quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
-quarkus.jaeger.service-name=automatiko-weather-condition-service
-quarkus.jaeger.sampler-type=const
-quarkus.jaeger.sampler-param=1
+#quarkus.otel.exporter.otlp.traces.endpoint=http://localhost:4317
 
-%test.quarkus.jaeger.enable=false
+%test.quarkus.otel.sdk.disabled=true
