--- a/weather-conditions/pom.xml
+++ b/weather-conditions/pom.xml
@@ -43,7 +43,7 @@
 
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-opentracing</artifactId>
+      <artifactId>quarkus-opentelemetry</artifactId>
     </dependency>
 
     <dependency>
