--- a/document-processor/pom.xml
+++ b/document-processor/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.automatiko.examples</groupId>
     <artifactId>automatiko-examples</artifactId>
-    <version>0.33.0</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>document-processor</artifactId>
 
