--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
 
-    <quarkus.version>3.5.3</quarkus.version>
-    <camel.version>3.0.0-RC2</camel.version>
+    <quarkus.version>3.10.0</quarkus.version>
+    <camel.version>3.10.0</camel.version>
     <automatiko.version>${project.version}</automatiko.version>
     <wiremock.version>2.35.0</wiremock.version>
 
