--- a/omboarding/notifications/pom.xml
+++ b/omboarding/notifications/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.automatiko.examples</groupId>
     <artifactId>omboarding</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.34.0</version>
   </parent>
   <artifactId>notifications</artifactId>
 
