added test case for direct messaging in java dsl

--- a/workflows-java-dsl/src/main/resources/application.properties
+++ b/workflows-java-dsl/src/main/resources/application.properties
@@ -14,6 +14,7 @@ quarkus.automatiko.persistence.type=filesystem
 quarkus.automatiko.persistence.filesystem.path=target/processes
 
 %dev.quarkus.automatiko.on-instance-end=keep
+%test.quarkus.automatiko.on-instance-end=keep
 quarkus.automatiko.security.authorized-only=false
 
 quarkus.log.category."org.openapitools".level=ERROR
