--- a/event-streams-sensors/pom.xml
+++ b/event-streams-sensors/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>automatiko-examples</artifactId>
     <groupId>io.automatiko.examples</groupId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.35.0</version>
   </parent>
   <artifactId>event-streams-sensors</artifactId>
 
