--- a/workflows-java-dsl/pom.xml
+++ b/workflows-java-dsl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.automatiko.examples</groupId>
     <artifactId>automatiko-examples</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.37.0</version>
   </parent>
   <artifactId>workflows-java-dsl</artifactId>
   <name>Automatiko Examples:: Workflow Java DSL :: Samples</name>
