--- a/mysql-operator/pom.xml
+++ b/mysql-operator/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.automatiko.examples</groupId>
     <artifactId>automatiko-examples</artifactId>
-    <version>0.37.0</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>mysql-operator</artifactId>
 
