use redpandadata/redpanda:latest as dev services image for kafka tests

--- a/event-streams-orders/src/main/resources/application.properties
+++ b/event-streams-orders/src/main/resources/application.properties
@@ -24,3 +24,5 @@ quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 %test.mp.messaging.incoming.orders.connector=smallrye-in-memory
 %test.mp.messaging.incoming.customers.connector=smallrye-in-memory
 
+quarkus.kafka.devservices.image-name=redpandadata/redpanda:latest
+
