--- a/workflows-java-dsl/src/main/resources/application.properties
+++ b/workflows-java-dsl/src/main/resources/application.properties
@@ -25,4 +25,4 @@ quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 
 quarkus.kafka.devservices.port=55100
 
-
+quarkus.kafka.devservices.image-name=redpandadata/redpanda:latest
