--- a/user-registration-javadsl/pom.xml
+++ b/user-registration-javadsl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>automatiko-examples</artifactId>
     <groupId>io.automatiko.examples</groupId>
-    <version>0.39.0</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>user-registration-javadsl</artifactId>
 
