--- a/user-registration/pom.xml
+++ b/user-registration/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.automatiko.examples</groupId>
     <artifactId>automatiko-examples</artifactId>
-    <version>0.47.0</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>user-registration</artifactId>
 
