--- a/vacation-requests/src/main/resources/application.properties
+++ b/vacation-requests/src/main/resources/application.properties
@@ -36,7 +36,7 @@ quarkus.jib.base-jvm-image=eclipse-temurin:17-jre-alpine
 %test.quarkus.hibernate-orm.log.sql=false
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:automatiko-store
 # drop and create the database at startup (use `update` to only update the schema)
-%test.quarkus.hibernate-orm.database.generation=create-drop
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
 
 %withemail.quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
 %withemail.quarkus.mailer.from=${email.from}
